# thewe

./: .gitignore  .gitmodules  CMakeLists.txt  OpenWinProject.bat  README
Classes/: Application.cpp  Application.h  ArbitraryHull.cpp  ArbitraryHull.h  BonusMapWidget.cpp  BonusMapWidget.h  BonusOnMap.cpp  BonusOnMap.h  Cell.cpp  Cell.h  CellGameInterface.cpp  CellGameInterface.h  CellInfoMenu.cpp  CellInfoMenu.h  CellMapPopupButton.cpp  CellMapPopupButton.h  CellMapWidget.cpp  CellMapWidget.h  CellNetWidget.cpp  CellNetWidget.h  CellRadialMenu.cpp  CellRadialMenu.h  CellScreenLayer.cpp  CellScreenLayer.h  CellSpinoffCreator.cpp  CellSpinoffCreator.h  CellSpinoffMenu.cpp  CellSpinoffMenu.h  CellTaskInfoMenu.cpp  CellTaskInfoMenu.h  CellTasksMenu.cpp  CellTasksMenu.h  CellsNetLayer.cpp  CellsNetLayer.h  CellsNetwork.cpp  CellsNetwork.h  CircleMenu.cpp  CircleMenu.h  Color.cpp  Color.h  (+172 more)
Classes/pugixml/: pugixml.hpp
Resources/gui/GameHud/: GameHud.json  Message.json
Resources/gui/MainMenu/: MainMenu_1.json
Resources/gui/Tutorial/: Tutorial.json  tutorial.ExportJson
Resources/gui/UICellInfo/: UICellInfo.json
Resources/gui/UICellSpinoff/: UICellSpinoff.csb
Resources/gui/UICellTaskSelect/: ScrollTaskItem.json  UICellTaskSelect.json
Resources/gui/tutorial/: tutorial.ExportJson  tutorial0.plist  tutorial_a.ExportJson  tutorial_b.ExportJson
Resources/gui/ui_cell_ingame/: ui_cell_current_task.ExportJson  ui_cell_info.ExportJson  ui_cell_ingame0.plist  ui_cell_select_task.ExportJson  ui_cell_spinoff.ExportJson  ui_cell_task_item.ExportJson
Resources/gui/ui_gameplay/: tasks_menu.ExportJson  ui_gameplay0.plist
Resources/gui/ui_hud/: ui_hud.ExportJson  ui_hud0.plist  ui_message.ExportJson
Resources/gui/ui_main_menu/: ui_main_menu.ExportJson  ui_main_menu0.plist
Resources/saves/: save.sav
Resources/scripts/: mainLogic.lua  tasks.lua  tutorials.lua
Resources/shaders/: create_alpha_mask.fsh  create_alpha_mask.vsh  tutorial_blackout.fsh  tutorial_blackout.vsh
Resources/texts/: content.xml  localizations.ods
Resources/textures/: Panel.psd
Resources/worldinfo/: gameInfo.xml  hulls.xml  regions.xml  tasks.xml
UISources/: Localizations.ods
UISources/GameHud/: GameHud.xml.ui
UISources/GameHud/Json/: GameHud.json
UISources/MainMenu/: MainMenu.xml.ui
UISources/MainMenu/Json/: MainMenu_1.json
UISources/Tutorial/: Tutorial.xml.ui
UISources/Tutorial/Json/: Tutorial.json  tutorial_a.json  tutorial_b.json
UISources/UICellInfo/: UICellInfo.xml.ui
UISources/UICellSpinoff/: UICellSpinoff.xml.ui
UISources/UICellSpinoff/Json/: UICellSpinoff_1.json
UISources/UICellTaskSelect/: UICellTaskSelect.xml.ui
UISources/UICellTaskSelect/Json/: UICellTaskSelect.json
UISources/UICellTaskSelect/Resources/: arial-26-en-ru.fnt
UISources/ui_cell_ingame/: ui_cell_ingame.xml.ui
UISources/ui_cell_ingame/Json/: ui_cell_current_task.json  ui_cell_info.json  ui_cell_select_task.json  ui_cell_spinoff.json  ui_cell_task_item.json
UISources/ui_gameplay/: ui_gameplay.xml.ui
UISources/ui_gameplay/Json/: tasks_menu.json
UISources/ui_hud/: ui_hud.xml.ui
UISources/ui_hud/Json/: ui_hud.json  ui_message.json
UISources/ui_main_menu/: ui_main_menu.xml.ui
UISources/ui_main_menu/Json/: ui_main_menu.json
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml  local.properties  project.properties
proj.android/assets/saves/: profiles.xml  save-01.sav
proj.android/assets/worldinfo/: regions.xml
proj.android/jni/: Android.mk  Application.mk
proj.android/jni/hellocpp/: main.cpp
proj.android/res/values/: strings.xml
proj.android/src/org/cocos2dx/cpp/: AppActivity.java
proj.ios_mac/TheWeProject.xcodeproj/: project.pbxproj
proj.linux/: main.cpp
proj.win32/: TheWeProject.sln  TheWeProject.vcxproj  TheWeProject.vcxproj.filters  main.cpp
proj.wp8-xaml/: TheWeProject.sln
proj.wp8-xaml/App/: TheWeProject.csproj
release/_gamedata/: regions.xml
source/: Main.cpp
source/compiler/: CleanAll.bat
source/compiler/Windows/: Clean.bat  Game.sln  Game.vcxproj  Game.vcxproj.filters
source/engine/Win32/: libcocos2d.lib
source/engine/lib/: libBox2D.lib  libCocosDenshion.lib  libExtensions.exp  libExtensions.lib  libchipmunk.lib  libcocos2d.lib
source/game/: Application.cpp  Application.h  ArbitraryHull.cpp  ArbitraryHull.h  Cell.cpp  Cell.h  CellScreenLayer.cpp  CellScreenLayer.h  Color.cpp  Color.h  ConvexHullTest.cpp  ConvexHullTest.h  Drawable.cpp  Drawable.h  EditorLayer.cpp  EditorLayer.h  GameLoader.cpp  GameLoader.h  GameScene.cpp  GameScene.h  Log.cpp  LuaBindings.cpp  LuaFunction.cpp  LuaFunction.h  LuaInstance.cpp  LuaInstance.h  MapGuiLayer.cpp  MapGuiLayer.h  MapProjector.cpp  MapProjector.h  PlayersProfiles.cpp  PlayersProfiles.h  Point.cpp  Point.h  Region.cpp  Region.h  RegionDrawLayer.cpp  RegionDrawLayer.h  RegionInfoLayer.cpp  RegionInfoLayer.h  (+24 more)
source/resources/: button.psd  round-buttonl.psd
utils/: UpdateText.py
